small bugs updated : column gap between card info

--- a/styles.css
+++ b/styles.css
@@ -161,6 +161,7 @@ button {
   height: 100%;
   padding: 50px;
   display: flex;
+  column-gap: 15px;
   justify-content: space-between;
   align-items: center;
   padding: 20px 30px;
